# cnbiros_navigation

./: CMakeLists.txt  package.xml
examples/: example_fusion.cpp
include/cnbiros_navigation/: Flags.hpp  ForceField.hpp  FusionGrid.hpp  SimpleFusion.hpp  TrigTools.hpp
src/: ForceField.cpp  FusionGrid.cpp  SimpleFusion.cpp  TrigTools.cpp
srv/: ResetGridService.srv  SetStrengthSrv.srv
