<?xml version="1.0"?>
<package>
  <name>cnbiros_navigation</name>
  <version>0.1.0</version>
  <description>CNBIROS Navigation library</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>grid_map_ros</build_depend>
  <run_depend>grid_map_ros</run_depend>
  <build_depend>grid_map_cv</build_depend>
  <run_depend>grid_map_cv</run_depend>
  <build_depend>grid_map_msgs</build_depend>
  <run_depend>grid_map_msgs</run_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>cnbiros_core</build_depend>
  <run_depend>cnbiros_core</run_depend>

</package>
